--- a/src/com/alvtag/kubkardesktop/HomeForm.form
+++ b/src/com/alvtag/kubkardesktop/HomeForm.form
@@ -183,8 +183,9 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="false"/>
           <horizontalAlignment value="0"/>
-          <selected value="true"/>
+          <selected value="false"/>
           <text value=""/>
           <verticalAlignment value="1"/>
         </properties>
