--- a/src/com/alvtag/kubkardesktop/RaceOverViewForm.form
+++ b/src/com/alvtag/kubkardesktop/RaceOverViewForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="656" height="524"/>
+      <xy x="20" y="20" width="656" height="684"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -40,14 +40,6 @@
         <properties>
           <text value="Start Heat &gt;"/>
         </properties>
-      </component>
-      <component id="1dc4e" class="javax.swing.JList" binding="averageTimesJList">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <component id="c683f" class="javax.swing.JButton" binding="backButton" default-binding="true">
         <constraints>
@@ -145,6 +137,32 @@
             <minimum-size width="20" height="20"/>
             <preferred-size width="20" height="20"/>
             <maximum-size width="20" height="20"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <scrollpane id="ccdd6">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="1" use-parent-layout="false">
+            <minimum-size width="200" height="80"/>
+            <preferred-size width="200" height="80"/>
+            <maximum-size width="200" height="80"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="1dc4e" class="javax.swing.JList" binding="averageTimesJList">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <hspacer id="f926c">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="10"/>
+            <preferred-size width="200" height="10"/>
+            <maximum-size width="200" height="10"/>
           </grid>
         </constraints>
       </hspacer>
