--- a/src/com/alvtag/kubkardesktop/RaceOverViewForm.form
+++ b/src/com/alvtag/kubkardesktop/RaceOverViewForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alvtag.kubkardesktop.RaceOverViewForm">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="656" height="684"/>
@@ -8,123 +8,42 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="4211f" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Race Overview"/>
-        </properties>
-      </component>
       <component id="e1414" class="javax.swing.JList" binding="heatsJList">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="5" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="5" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <vspacer id="38f52">
-        <constraints>
-          <grid row="1" column="7" row-span="3" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="400"/>
-            <preferred-size width="-1" height="400"/>
-            <maximum-size width="-1" height="400"/>
-          </grid>
-        </constraints>
-      </vspacer>
       <component id="9cd3e" class="javax.swing.JButton" binding="startHeatButton" default-binding="true">
         <constraints>
-          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Start Heat &gt;"/>
         </properties>
       </component>
-      <component id="c683f" class="javax.swing.JButton" binding="backButton" default-binding="true">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Back"/>
-        </properties>
-      </component>
-      <component id="47ac8" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="165" height="16"/>
-          </grid>
-        </constraints>
-        <properties>
-          <horizontalAlignment value="4"/>
-          <text value="Copies"/>
-        </properties>
-      </component>
-      <component id="70b70" class="javax.swing.JSpinner" binding="printHeatCopiesSpinner">
-        <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="70" height="30"/>
-            <preferred-size width="70" height="30"/>
-            <maximum-size width="70" height="30"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="3aeed" class="javax.swing.JButton" binding="printHeatsButton">
-        <constraints>
-          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Print"/>
-        </properties>
-      </component>
       <component id="7e9d2" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Fastest Average Times"/>
         </properties>
       </component>
-      <component id="c113c" class="javax.swing.JButton" binding="printAverageTimesButton">
-        <constraints>
-          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Print"/>
-        </properties>
-      </component>
-      <component id="65f73" class="javax.swing.JSpinner" binding="printAverageTimesCopiesSpinner">
-        <constraints>
-          <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="70" height="30"/>
-            <preferred-size width="70" height="30"/>
-            <maximum-size width="70" height="30"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <hspacer id="bc192">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
             <preferred-size width="20" height="20"/>
             <maximum-size width="20" height="20"/>
           </grid>
         </constraints>
       </hspacer>
-      <vspacer id="e9f50">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="1" use-parent-layout="false">
-            <minimum-size width="20" height="20"/>
-            <preferred-size width="20" height="20"/>
-            <maximum-size width="20" height="20"/>
-          </grid>
-        </constraints>
-      </vspacer>
       <vspacer id="53a7e">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="1" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="1" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
             <preferred-size width="20" height="20"/>
             <maximum-size width="20" height="20"/>
@@ -142,7 +61,7 @@
       </hspacer>
       <scrollpane id="ccdd6">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="1" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="1" use-parent-layout="false">
             <minimum-size width="200" height="80"/>
             <preferred-size width="200" height="80"/>
             <maximum-size width="200" height="80"/>
@@ -159,13 +78,54 @@
       </scrollpane>
       <hspacer id="f926c">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="10"/>
             <preferred-size width="200" height="10"/>
             <maximum-size width="200" height="10"/>
           </grid>
         </constraints>
       </hspacer>
+      <component id="c113c" class="javax.swing.JButton" binding="printAverageTimesButton">
+        <constraints>
+          <grid row="4" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Print Results"/>
+        </properties>
+      </component>
+      <vspacer id="38f52">
+        <constraints>
+          <grid row="1" column="7" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="400"/>
+            <preferred-size width="-1" height="400"/>
+            <maximum-size width="-1" height="400"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <component id="c683f" class="javax.swing.JButton" binding="backButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Back"/>
+        </properties>
+      </component>
+      <component id="4211f" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Race Overview"/>
+        </properties>
+      </component>
+      <component id="3aeed" class="javax.swing.JButton" binding="printHeatsButton">
+        <constraints>
+          <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Print Heats"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
