--- a/src/com/alvtag/kubkardesktop/HeatForm.form
+++ b/src/com/alvtag/kubkardesktop/HeatForm.form
@@ -564,6 +564,14 @@
           <text value="Name"/>
         </properties>
       </component>
+      <component id="dcd61" class="javax.swing.JButton" binding="refreshButton" default-binding="true">
+        <constraints>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Refresh"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
